--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     color: black;
   }
 </style>
-<h1>TASUTA LAHEDAD Naljad
+<h1>LAHEDAD NALJAD
     <button id = "butn">
     genereeri nali
     </button>
     <h2>
-      VAJUTA NUPPU JA SIIS TULEB NALJAKAS NALI!!!
+      VAJUTA NUPPU JA SIIS TULEB NALJAKAS NALI
     </h2>
     <h4>
       <button id ="setupb">
