--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     genereeri nali
     </button>
     <h2>
-      VAJUTA NUPPU JA SIIS TULEB NALJAKAS NALI
+      Vajuta nupule ja tuleb nali
     </h2>
     <h4>
       <button id ="setupb">
